[package]
name = "message-box"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.1", features = ["macros"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
shuttle-axum = "0.55.0"
shuttle-runtime = "0.55.0"
shuttle-shared-db = { version = "0.55.0", features = ["sqlx", "postgres"] }
sqlx = { version = "0.8.6", features = [
  "runtime-tokio",
  "sqlx-postgres",
  "macros",
] }
tokio = "1.28.2"
tower-http = { version = "0.6.6", features = ["cors"] }
